Update and rename 2-estimators_Likelihood.md to 2.1-estimators_Likelihood.md

--- a/_posts/2.1-estimators_Likelihood.md
+++ b/_posts/2.1-estimators_Likelihood.md
@@ -1,5 +1,18 @@
 # Maximum Likelihood Estimators
 
+Maximum likelihood estimators try to find (estimate) an unknown parameters that maximizes the likelihood of getting the data we observed.
+
+---
+
+Suppose we have a random sample _X1, X2...., Xn_ for which the probability density function of each _Xi_ is f(xi|theta).  Then the joint probability density function of _X1, X2...., Xn_, that we call L(theta) is...
+
+![Screen Shot 2021-06-25 at 12 30 39 PM](https://user-images.githubusercontent.com/26121178/123457288-c2428880-d5b1-11eb-9ce5-dad633999f35.png)
+
+So we treat the **Likelihood function**, L(theta) as a function of theta and find the theta tha maximizes it.
+
+---
+
+
 
 ## Likelihood
 
