--- a/_posts/2.1-estimators_Likelihood.md
+++ b/_posts/2.1-estimators_Likelihood.md
@@ -1,6 +1,9 @@
 # Maximum Likelihood Estimators
 
-Maximum likelihood estimators try to find (estimate) an unknown parameters that maximizes the likelihood of getting the data we observed.
+
+Maximum Likelihood can be seen as an attempt to make the model distribution match the emperical distibution (p_data) - getting as close to the data generating process as possible.  
+
+The estimator tries to minimize the dissimilarity between the empirical distribution (p_data) and the model dsitribution with the degree of dissimilarity between the two being measured by [KL-divergence](KLdiv_vs_CrossEntropy.md). We can extend this to cross-entropy, seeing as the parameters altered to minimize cross-entropy is the same as minizing KL-divergence - the difference between the two terms is that KL-divergence includes a term representing the empirical distribution (this is not dependent on the predict distribution).
 
 ---
 
