--- a/_posts/2.1-estimators_Likelihood.md
+++ b/_posts/2.1-estimators_Likelihood.md
@@ -1,9 +1,12 @@
 # Maximum Likelihood Estimators
 
+Maximum likelihood estimation (MLE), is simply the framework for inference for finding the best statistical estimates of parameters from historical training data.
 
-Maximum Likelihood can be seen as an attempt to make the model distribution match the emperical distibution (p_data) - getting as close to the data generating process as possible.  
+It is an attempt to make the model distribution match the emperical distibution (p_data) - getting as close to the data generating process as possible.  A benifit of MLE framework is that it has the property of "**consistency**", which means that the model's estimate of parameters improves with the increase in the training set size.
 
 The estimator tries to minimize the dissimilarity between the empirical distribution (p_data) and the model dsitribution with the degree of dissimilarity between the two being measured by [KL-divergence](KLdiv_vs_CrossEntropy.md). We can extend this to cross-entropy, seeing as the parameters altered to minimize cross-entropy is the same as minizing KL-divergence - the difference between the two terms is that KL-divergence includes a term representing the empirical distribution (this is not dependent on the predict distribution).
+
+Two good articles about Likelihood and different loss functions - [applied to deep learning/ANN](https://glassboxmedicine.com/2019/12/07/connections-log-likelihood-cross-entropy-kl-divergence-logistic-regression-and-neural-networks/) and [a more general approach](https://machinelearningmastery.com/loss-and-loss-functions-for-training-deep-learning-neural-networks/).
 
 ---
 
